Add router preconf base

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -12,6 +12,10 @@
     align-items: center;
     margin-top: 60px;
 
+    .xpcd {
+      margin-bottom: 60px;
+    }
+
     .container {
         text-align: center;
 
